[ADD] added icon
added icon for web page

--- a/sito-web-laboratorio/index.html
+++ b/sito-web-laboratorio/index.html
@@ -1,133 +1,150 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>GamesCon Event</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="./assets/icon_gamescon.png" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <a href="#info">Info</a>
-                    <div class="dropdown-content">
-                        <a href="#come-arrivare">Come arrivare</a>
-                        <a href="#accessibilita">Accessibilità</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#aree">Aree</a>
-                    <div class="dropdown-content">
-                        <a href="#games">Games</a>
-                        <a href="#cosplay">Cosplay</a>
-                        <a href="#conference">Conference</a>
-                        <a href="#area-commerciale">Area Commerciale</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#attivita">Attività</a>
-                    <div class="dropdown-content">
-                        <a href="#formazione-developers">Formazione Developers</a>
-                        <a href="#videogames-tabletop">Videogames & Tabletop</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#social">Social</a>
-                    <div class="dropdown-content">
-                        <a href="#formazione-developers">Facebook</a>
-                        <a href="#videogames-tabletop">Instagram</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#social">Contatti</a>
-                    <div class="dropdown-content">
-                        <a href="#contatti">Contatti</a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li class="dropdown">
+            <a href="#info">Info</a>
+            <div class="dropdown-content">
+              <a href="#come-arrivare">Come arrivare</a>
+              <a href="#accessibilita">Accessibilità</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#aree">Aree</a>
+            <div class="dropdown-content">
+              <a href="#games">Games</a>
+              <a href="#cosplay">Cosplay</a>
+              <a href="#conference">Conference</a>
+              <a href="#area-commerciale">Area Commerciale</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#attivita">Attività</a>
+            <div class="dropdown-content">
+              <a href="#formazione-developers">Formazione Developers</a>
+              <a href="#videogames-tabletop">Videogames & Tabletop</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#social">Social</a>
+            <div class="dropdown-content">
+              <a href="#formazione-developers">Facebook</a>
+              <a href="#videogames-tabletop">Instagram</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#social">Contatti</a>
+            <div class="dropdown-content">
+              <a href="#contatti">Contatti</a>
+            </div>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <section id="header-image">
-            <div class="header-image-container">
-                <img src="./assets/gamescon.png" alt="Event Header Image">
-            </div>
-        </section>
+      <section id="header-image">
+        <div class="header-image-container">
+          <img src="./assets/gamescon.png" alt="Event Header Image" />
+        </div>
+      </section>
 
-        <section id="carousel">
-            <div class="carousel-container">
-                <div class="carousel-images"></div>
-            </div>
-        </section>
+      <section id="carousel">
+        <div class="carousel-container">
+          <div class="carousel-images"></div>
+        </div>
+      </section>
 
-        <h1>STATUS BIGLIETTI</h1>
-        <section id="ticket-counter">
-            <div class="dates-container">
-                <div class="date-circle">
-                    <span class="date">30.10</span>
-                    <div class="tickets-percentage">50%</div>
-                    <button class="acquista-btn">ACQUISTA ORA</button>
-                </div>
-                <div class="date-circle">
-                    <span class="date">31.10</span>
-                    <div class="tickets-percentage">75%</div>
-                    <button class="acquista-btn">ACQUISTA ORA</button>
-                </div>
-                <div class="date-circle">
-                    <span class="date">01.11</span>
-                    <div class="tickets-percentage">25%</div>
-                    <button class="acquista-btn">ACQUISTA ORA</button>
-                </div>
-            </div>
-        </section>
+      <h1>STATUS BIGLIETTI</h1>
+      <section id="ticket-counter">
+        <div class="dates-container">
+          <div class="date-circle">
+            <span class="date">30.10</span>
+            <div class="tickets-percentage">50%</div>
+            <button class="acquista-btn">ACQUISTA ORA</button>
+          </div>
+          <div class="date-circle">
+            <span class="date">31.10</span>
+            <div class="tickets-percentage">75%</div>
+            <button class="acquista-btn">ACQUISTA ORA</button>
+          </div>
+          <div class="date-circle">
+            <span class="date">01.11</span>
+            <div class="tickets-percentage">25%</div>
+            <button class="acquista-btn">ACQUISTA ORA</button>
+          </div>
+        </div>
+      </section>
 
-        <h1>DOVE SIAMO</h1>
-        <section id="mappa-evento">
-            <div class="image-container">
-                <img src="./assets/mappa.png" alt="Mappa evento">
-            </div>
-        </section>
+      <h1>DOVE SIAMO</h1>
+      <section id="mappa-evento">
+        <div class="image-container">
+          <img src="./assets/mappa.png" alt="Mappa evento" />
+        </div>
+      </section>
 
-        <h1>PARTECIPA</h1>
+      <h1>PARTECIPA</h1>
 
-        <section class="registration-container">
-            <div id="registration-form">
-                <h2>Prenota subito il tuo biglietto!</h2>
-                <form>
-                    <div class="form-group">
-                        <input type="text" placeholder="Nome" name="nome" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" placeholder="Cognome" name="cognome" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" placeholder="Email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="tel" placeholder="Telefono" name="telefono" required>
-                    </div>
-                    <div class="form-group">
-                        <select id="attivita-select" name="attivita" required>
-                            <option value="">Seleziona l'attività preferita</option>
-                            <option>Esplorare Realtà Aumentata e Virtuale</option>
-                            <option>Giochi da Tavolo e D&D</option>
-                            <option>Formazione: Diventa un Videogame Developer</option>
-                            <option>Come diventare Content Creator</option>
-                            <option>Incontrare gli Streamers</option>
-                            <option>Ascoltare le Conferenze</option>
-                            <option>Partecipare alla Gara Cosplay</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="submit-btn">Invia Richiesta</button>
-                </form>
+      <section class="registration-container">
+        <div id="registration-form">
+          <h2>Prenota subito il tuo biglietto!</h2>
+          <form>
+            <div class="form-group">
+              <input type="text" placeholder="Nome" name="nome" required />
             </div>
-        </section>
+            <div class="form-group">
+              <input
+                type="text"
+                placeholder="Cognome"
+                name="cognome"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <input type="email" placeholder="Email" name="email" required />
+            </div>
+            <div class="form-group">
+              <input
+                type="tel"
+                placeholder="Telefono"
+                name="telefono"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <select id="attivita-select" name="attivita" required>
+                <option value="">Seleziona l'attività preferita</option>
+                <option>Esplorare Realtà Aumentata e Virtuale</option>
+                <option>Giochi da Tavolo e D&D</option>
+                <option>Formazione: Diventa un Videogame Developer</option>
+                <option>Come diventare Content Creator</option>
+                <option>Incontrare gli Streamers</option>
+                <option>Ascoltare le Conferenze</option>
+                <option>Partecipare alla Gara Cosplay</option>
+              </select>
+            </div>
+            <button type="submit" class="submit-btn">Invia Richiesta</button>
+          </form>
+        </div>
+      </section>
     </main>
 
     <script src="scripts/main.js"></script>
-</body>
+  </body>
 </html>
