[fixed issue] Web Page not visualized correctly
Chaged every href path and fixed Image Carosel Event listener

--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -7,12 +7,12 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>GamesCon Event</title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="../styles/home_styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./assets/icon_gamescon.png" />
+    <link rel="icon" href="../assets/icon_gamescon.png" />
   </head>
   <body>
     <header>
@@ -61,7 +61,7 @@
     <main>
       <section id="header-image">
         <div class="header-image-container">
-          <img src="./assets/gamescon.png" alt="Event Header Image" />
+          <img src="../assets/gamescon.png" alt="Event Header Image" />
         </div>
       </section>
 
@@ -95,7 +95,7 @@
       <h1>DOVE SIAMO</h1>
       <section id="mappa-evento">
         <div class="image-container">
-          <img src="./assets/mappa.png" alt="Mappa evento" />
+          <img src="../assets/mappa.png" alt="Mappa evento" />
         </div>
       </section>
 
@@ -145,6 +145,6 @@
       </section>
     </main>
 
-    <script src="scripts/main.js"></script>
+    <script src="../scripts/home_script.js"></script>
   </body>
 </html>
