--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -95,7 +95,11 @@
       <h1>DOVE SIAMO</h1>
       <section id="mappa-evento">
         <div class="image-container">
-          <img src="../assets/mappa.png" alt="Mappa evento" />
+          <img
+            id="event_map"
+            src="../assets/mappa_gamescon.png"
+            alt="Mappa evento"
+          />
         </div>
       </section>
 
