--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -29,7 +29,7 @@
             <a href="#aree">Aree</a>
             <div class="dropdown-content">
               <a href="#games">Games</a>
-              <a href="#cosplay">Cosplay</a>
+              <a href="cosplay.html">Cosplay</a>
               <a href="#conference">Conference</a>
               <a href="#area-commerciale">Area Commerciale</a>
             </div>
@@ -38,14 +38,14 @@
             <a href="#attivita">Attività</a>
             <div class="dropdown-content">
               <a href="#formazione-developers">Formazione Developers</a>
-              <a href="#videogames-tabletop">Videogames & Tabletop</a>
+              <a href="videogames.html">Videogames & Tabletop</a>
             </div>
           </li>
           <li class="dropdown">
             <a href="#social">Social</a>
             <div class="dropdown-content">
-              <a href="#formazione-developers">Facebook</a>
-              <a href="#videogames-tabletop">Instagram</a>
+              <a href="#facebook">Facebook</a>
+              <a href="#instagram">Instagram</a>
             </div>
           </li>
           <li class="dropdown">
