--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -21,7 +21,7 @@
           <li class="dropdown">
             <a href="#info">Info</a>
             <div class="dropdown-content">
-              <a href="#come-arrivare">Come arrivare</a>
+              <a href="comeArrivare.html">Come arrivare</a>
               <a href="#accessibilita">Accessibilità</a>
             </div>
           </li>
