--- a/sito-web-laboratorio/html_pages/videogames.html
+++ b/sito-web-laboratorio/html_pages/videogames.html
@@ -13,10 +13,58 @@
       rel="stylesheet"
     />
   </head>
-</html>
-<link rel="icon" href="../assets/icon_gamescon.png" />
-  </head>
   <body>
+    <header>
+        <nav>
+          <ul>
+            <li class="dropdown">
+              <a href="#">Home</a>
+              <div class="dropdown-content">
+                  <a href="home.html">Home</a>
+              </div>
+          </li>
+          <li class="dropdown">
+            <a href="#info">Info</a>
+            <div class="dropdown-content">
+              <a href="#come-arrivare">Come arrivare</a>
+              <a href="#accessibilita">Accessibilità</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#aree">Aree</a>
+            <div class="dropdown-content">
+              <a href="#games">Games</a>
+              <a href="cosplay.html">Cosplay</a>
+              <a href="#conference">Conference</a>
+              <a href="#area-commerciale">Area Commerciale</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#attivita">Attività</a>
+            <div class="dropdown-content">
+              <a href="#formazione-developers">Formazione Developers</a>
+              <a href="videogames.html">Videogames & Tabletop</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#social">Social</a>
+            <div class="dropdown-content">
+              <a href="#facebook">Facebook</a>
+              <a href="#instagram">Instagram</a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <a href="#social">Contatti</a>
+            <div class="dropdown-content">
+              <a href="#contatti">Contatti</a>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  <main>
+    <link rel="icon" href="../assets/icon_gamescon.png" />
+ <body>
   <h1>GIOCHI VR</h1>
   <section id="vr-section" class="activity-section">
     <div class="activity-container">
@@ -69,6 +117,7 @@
         <p>Un gioco di ruolo che mescola western e horror soprannaturale. Esplora il selvaggio West infestato da mostri e spiriti malvagi.</p>
       </div>
 </section>
+</main>
 </body>
 </html>
 
