--- a/sito-web-laboratorio/html_pages/formazione_dev.html
+++ b/sito-web-laboratorio/html_pages/formazione_dev.html
@@ -26,7 +26,7 @@
           <li class="dropdown">
             <a href="#info">Info</a>
             <div class="dropdown-content">
-              <a href="#come-arrivare">Come arrivare</a>
+              <a href="./comeArrivare.html">Come arrivare</a>
               <a href="#accessibilita">Accessibilità</a>
             </div>
           </li>
@@ -42,7 +42,7 @@
           <li class="dropdown">
             <a href="#attivita">Attività</a>
             <div class="dropdown-content">
-              <a href="#formazione-developers">Formazione Developers</a>
+              <a href="./formazione_dev.html">Formazione Developers</a>
               <a href="videogames.html">Videogames & Tabletop</a>
             </div>
           </li>
