--- a/sito-web-laboratorio/html_pages/formazione_dev.html
+++ b/sito-web-laboratorio/html_pages/formazione_dev.html
@@ -63,38 +63,52 @@
       </nav>
     </header>
     <link rel="icon" href="../assets/icon_gamescon.png" />
-    <body>
-      
-       <h2>Workshop Pratici:</h2> 
-          <p>Scopri i principali strumenti per creare videogiochi,
-        come Unity e Unreal Engine, e impara le basi del game design e della
-        programmazione.
-      </p>
-
-      <h2>Seminari con Esperti:</h2> 
-      <p>Professionisti del settore condivideranno consigli
-        e case study su come entrare nel mondo dello sviluppo di videogiochi.
-      </p>
-
-      <h2> Mini Game Jam:</h2> 
-      <p>Mettiti alla prova con altri partecipanti sviluppando un
-        piccolo videogioco a tema Halloween.
-      </p>
-
-      <h2>   Laboratori Creativi: </h2> 
-      <p>
-       Approfondisci aspetti come il Level Design, la
-        grafica 3D e l’ottimizzazione per il gaming competitivo.
-      </p>
-
-      <h2>Perché Partecipare?</h2>
-      <p>
-        Avrai l’opportunità di imparare dai migliori, sviluppare nuove
-        competenze e confrontarti con altri appassionati.
-        Scopri come trasformare la tua passione per i videogiochi in una
-        professione.
-        Non perdere l’occasione di immergerti nel mondo dello sviluppo
-        videoludico. Prenota il tuo posto e vieni a vivere un’esperienza unica!
-      </p>
+    <main>
+      <section id="programma">
+        <h1>Programma Formazione</h1>
+        <div class="timeline">
+          <div class="timeline-event">
+            <h3>Ore 10:00 - Workshop Pratici</h3>
+            <p>
+              Scopri i principali strumenti per creare videogiochi, come Unity e
+              Unreal Engine, e impara le basi del game design e della
+              programmazione.
+            </p>
+          </div>
+          <div class="timeline-event">
+            <h3>Ore 12:00 - Seminari con Esperti:</h3>
+            <p>
+              Professionisti del settore condivideranno consigli e case study su
+              come entrare nel mondo dello sviluppo di videogiochi.
+            </p>
+          </div>
+          <div class="timeline-event">
+            <h3>Ore 14:00 - Mini Game Jam:</h3>
+            <p>
+              Mettiti alla prova con altri partecipanti sviluppando un piccolo
+              videogioco a tema Halloween.
+            </p>
+          </div>
+          <div class="timeline-event">
+            <h3>Ore 16:00 - Laboratori Creativi:</h3>
+            <p>
+              Approfondisci aspetti come il Level Design, la grafica 3D e
+              l’ottimizzazione per il gaming competitivo.
+            </p>
+          </div>
+          <div class="timeline-event">
+            <h3>Perché Partecipare?</h3>
+            <p>
+              Avrai l’opportunità di imparare dai migliori, sviluppare nuove
+              competenze e confrontarti con altri appassionati. Scopri come
+              trasformare la tua passione per i videogiochi in una professione.
+              Non perdere l’occasione di immergerti nel mondo dello sviluppo
+              videoludico. Prenota il tuo posto e vieni a vivere un’esperienza
+              unica!
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
