--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -37,7 +37,7 @@
           <li class="dropdown">
             <a href="#attivita">Attività</a>
             <div class="dropdown-content">
-              <a href="#formazione-developers">Formazione Developers</a>
+              <a href="./formazione_dev.html">Formazione Developers</a>
               <a href="videogames.html">Videogames & Tabletop</a>
             </div>
           </li>
