--- a/sito-web-laboratorio/html_pages/cosplay.html
+++ b/sito-web-laboratorio/html_pages/cosplay.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosplay</title>
     <link rel="stylesheet" href="../styles/cosplay_styles.css">
+    <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" 
     rel="stylesheet">
     <link rel="icon" href="../assets/icon_gamescon.png" />
@@ -22,7 +23,7 @@
             <li class="dropdown">
               <a href="#info">Info</a>
               <div class="dropdown-content">
-                <a href="#come-arrivare">Come arrivare</a>
+                <a href="./comeArrivare.html">Come arrivare</a>
                 <a href="#accessibilita">Accessibilità</a>
               </div>
             </li>
@@ -38,17 +39,16 @@
             <li class="dropdown">
               <a href="#attivita">Attività</a>
               <div class="dropdown-content">
-                <a href="#formazione-developers">Formazione Developers</a>
+                <a href="./formazione_dev.html">Formazione Developers</a>
                 <a href="videogames.html">Videogames & Tabletop</a>
               </div>
             </li>
             <li class="dropdown">
-              <a href="#social">Social</a>
-              <div class="dropdown-content">
-                <a href="#facebook">Facebook</a>
-                <a href="#instagram">Instagram</a>
-              </div>
-            </li>
+                <div>
+                  <a href="#facebook"><img class="social" src="../assets/icon_facebook.svg"></a>
+                  <a href="#instagram"><img class="social" src="../assets/icon_instagram.svg"></a>
+                </div>
+              </li>
             <li class="dropdown">
               <a href="#social">Contatti</a>
               <div class="dropdown-content">
@@ -176,5 +176,6 @@
     </main>
 
     <script src="../scripts/cosplay_script.js"></script>
+    <script src="../scripts/navbar_scripts.js"></script>
 </body>
 </html>
