--- a/sito-web-laboratorio/html_pages/videogames.html
+++ b/sito-web-laboratorio/html_pages/videogames.html
@@ -8,6 +8,7 @@
     />
     <title>Videogames & Tabletop</title>
     <link rel="stylesheet" href="../styles/videogames_styles.css" />
+    <link rel="stylesheet" href="../styles/navbar_style.css"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
@@ -27,7 +28,7 @@
           <li class="dropdown">
             <a href="#info">Info</a>
             <div class="dropdown-content">
-              <a href="#come-arrivare">Come arrivare</a>
+              <a href="./comeArrivare.html">Come arrivare</a>
               <a href="#accessibilita">Accessibilità</a>
             </div>
           </li>
@@ -43,15 +44,14 @@
           <li class="dropdown">
             <a href="#attivita">Attività</a>
             <div class="dropdown-content">
-              <a href="#formazione-developers">Formazione Developers</a>
+              <a href="./formazione_dev.html">Formazione Developers</a>
               <a href="videogames.html">Videogames & Tabletop</a>
             </div>
           </li>
           <li class="dropdown">
-            <a href="#social">Social</a>
-            <div class="dropdown-content">
-              <a href="#facebook">Facebook</a>
-              <a href="#instagram">Instagram</a>
+            <div>
+              <a href="#facebook"><img class="social" src="../assets/icon_facebook.svg"></a>
+              <a href="#instagram"><img class="social" src="../assets/icon_instagram.svg"></a>
             </div>
           </li>
           <li class="dropdown">
@@ -119,6 +119,8 @@
       </div>
 </section>
 </main>
+<script src="../scripts/home_script.js"></script>
+<script src="../scripts/navbar_scripts.js"></script>
 </body>
 </html>
 
