--- a/sito-web-laboratorio/html_pages/comeArrivare.html
+++ b/sito-web-laboratorio/html_pages/comeArrivare.html
@@ -4,6 +4,7 @@
     <title>Come Arrivare</title>
     <meta name="description" content="Come Arrivare" />
     <link rel="stylesheet" href="../styles/comeArrivare_styles.css" />
+    <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link rel="icon" href="../assets/icon_gamescon.png" />
   </head>
   <body>
@@ -40,10 +41,9 @@
             </div>
           </li>
           <li class="dropdown">
-            <a href="#social">Social</a>
-            <div class="dropdown-content">
-              <a href="#facebook">Facebook</a>
-              <a href="#instagram">Instagram</a>
+            <div>
+              <a href="#facebook"><img class="social" src="../assets/icon_facebook.svg"></a>
+              <a href="#instagram"><img class="social" src="../assets/icon_instagram.svg"></a>
             </div>
           </li>
           <li class="dropdown">
@@ -56,5 +56,6 @@
       </nav>
     </header>
     <script src="../scripts/comeArrivare_script.js"></script>
+    <script src="../scripts/navbar_scripts.js"></script>
   </body>
 </html>
