--- a/sito-web-laboratorio/html_pages/formazione_dev.html
+++ b/sito-web-laboratorio/html_pages/formazione_dev.html
@@ -47,10 +47,13 @@
             </div>
           </li>
           <li class="dropdown">
-            <a href="#social">Social</a>
-            <div class="dropdown-content">
-              <a href="#facebook">Facebook</a>
-              <a href="#instagram">Instagram</a>
+            <div>
+              <a href="#facebook"
+                ><img class="social" src="../assets/icon_facebook.svg"
+              /></a>
+              <a href="#instagram"
+                ><img class="social" src="../assets/icon_instagram.svg"
+              /></a>
             </div>
           </li>
           <li class="dropdown">
