--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -8,6 +8,7 @@
     />
     <title>GamesCon Event</title>
     <link rel="stylesheet" href="../styles/home_styles.css" />
+    <link rel="stylesheet" href="../styles/navbar_style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
@@ -42,10 +43,13 @@
             </div>
           </li>
           <li class="dropdown">
-            <a href="#social">Social</a>
-            <div class="dropdown-content">
-              <a href="#facebook">Facebook</a>
-              <a href="#instagram">Instagram</a>
+            <div>
+              <a href="#facebook"
+                ><img class="social" src="../assets/icon_facebook.svg"
+              /></a>
+              <a href="#instagram"
+                ><img class="social" src="../assets/icon_instagram.svg"
+              /></a>
             </div>
           </li>
           <li class="dropdown">
@@ -150,5 +154,6 @@
     </main>
 
     <script src="../scripts/home_script.js"></script>
+    <script src="../scripts/navbar_scripts.js"></script>
   </body>
 </html>
