--- a/sito-web-laboratorio/html_pages/comeArrivare.html
+++ b/sito-web-laboratorio/html_pages/comeArrivare.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Come Arrivare" />
     <link rel="stylesheet" href="../styles/comeArrivare_styles.css" />
     <link rel="stylesheet" href="../styles/navbar_style.css" />
+    <link rel="stylesheet" href="../styles/bottombar_styles.css" />
     <link rel="icon" href="../assets/icon_gamescon.png" />
   </head>
   <body>
@@ -20,7 +21,7 @@
           <li class="dropdown">
             <a href="#info">Info</a>
             <div class="dropdown-content">
-              <a href="./comeArrivare.html">Come arrivare</a>
+              <a href="comeArrivare.html">Come arrivare</a>
               <a href="#accessibilita">Accessibilità</a>
             </div>
           </li>
@@ -41,12 +42,6 @@
             </div>
           </li>
           <li class="dropdown">
-            <div>
-              <a href="#facebook"><img class="social" src="../assets/icon_facebook.svg"></a>
-              <a href="#instagram"><img class="social" src="../assets/icon_instagram.svg"></a>
-            </div>
-          </li>
-          <li class="dropdown">
             <a href="#social">Contatti</a>
             <div class="dropdown-content">
               <a href="#contatti">Contatti</a>
@@ -55,6 +50,31 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div >
+        <img id="mappaEvento" src="../assets/cartina_gamescon.png" alt="cartina_gamescon">
+      </div>
+      
+    </main>
+    <footer>
+      <li class="dropdown">
+        <div>
+          <a href="#facebook" target="_blank"
+            ><img class="social" src="../assets/icon_facebook.svg"
+          /></a>
+          <a
+            href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
+            target="_blank"
+            ><img class="social" src="../assets/icon_instagram.svg"
+          /></a>
+          <a
+            href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
+            target="_blank"
+            ><img class="social" src="../assets/icon_tiktok.svg" />
+          </a>
+        </div>
+      </li>
+    </footer>
     <script src="../scripts/comeArrivare_script.js"></script>
     <script src="../scripts/navbar_scripts.js"></script>
   </body>
