--- a/sito-web-laboratorio/html_pages/cosplay.html
+++ b/sito-web-laboratorio/html_pages/cosplay.html
@@ -6,6 +6,7 @@
     <title>Cosplay</title>
     <link rel="stylesheet" href="../styles/cosplay_styles.css">
     <link rel="stylesheet" href="../styles/navbar_style.css" />
+    <link rel="stylesheet" href="../styles/bottombar_styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" 
     rel="stylesheet">
     <link rel="icon" href="../assets/icon_gamescon.png" />
@@ -43,12 +44,6 @@
                 <a href="videogames.html">Videogames & Tabletop</a>
               </div>
             </li>
-            <li class="dropdown">
-                <div>
-                  <a href="#facebook"><img class="social" src="../assets/icon_facebook.svg"></a>
-                  <a href="#instagram"><img class="social" src="../assets/icon_instagram.svg"></a>
-                </div>
-              </li>
             <li class="dropdown">
               <a href="#social">Contatti</a>
               <div class="dropdown-content">
@@ -174,7 +169,25 @@
             </div>
         </section>
     </main>
-
+    <footer>
+        <li class="dropdown">
+          <div>
+            <a href="#facebook" target="_blank"
+              ><img class="social" src="../assets/icon_facebook.svg"
+            /></a>
+            <a
+              href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
+              target="_blank"
+              ><img class="social" src="../assets/icon_instagram.svg"
+            /></a>
+            <a
+              href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
+              target="_blank"
+              ><img class="social" src="../assets/icon_tiktok.svg" />
+            </a>
+          </div>
+        </li>
+      </footer>
     <script src="../scripts/cosplay_script.js"></script>
     <script src="../scripts/navbar_scripts.js"></script>
 </body>
