--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -9,6 +9,7 @@
     <title>GamesCon Event</title>
     <link rel="stylesheet" href="../styles/home_styles.css" />
     <link rel="stylesheet" href="../styles/navbar_style.css" />
+    <link rel="stylesheet" href="../styles/bottombar_styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
@@ -42,16 +43,7 @@
               <a href="videogames.html">Videogames & Tabletop</a>
             </div>
           </li>
-          <li class="dropdown">
-            <div>
-              <a href="#facebook"
-                ><img class="social" src="../assets/icon_facebook.svg"
-              /></a>
-              <a href="#instagram"
-                ><img class="social" src="../assets/icon_instagram.svg"
-              /></a>
-            </div>
-          </li>
+
           <li class="dropdown">
             <a href="#social">Contatti</a>
             <div class="dropdown-content">
@@ -65,7 +57,7 @@
     <main>
       <section id="header-image">
         <div class="header-image-container">
-          <img src="../assets/gamescon.png" alt="Event Header Image" />
+          <img src="../assets/title_gamescon.png" alt="Event Header Image" />
         </div>
       </section>
 
@@ -101,7 +93,7 @@
         <div class="image-container">
           <img
             id="event_map"
-            src="../assets/mappa_gamescon.png"
+            src="../assets/cartina_gamescon.png"
             alt="Mappa evento"
           />
         </div>
@@ -152,7 +144,25 @@
         </div>
       </section>
     </main>
-
+    <footer>
+      <li class="dropdown">
+        <div>
+          <a href="#facebook" target="_blank"
+            ><img class="social" src="../assets/icon_facebook.svg"
+          /></a>
+          <a
+            href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
+            target="_blank"
+            ><img class="social" src="../assets/icon_instagram.svg"
+          /></a>
+          <a
+            href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
+            target="_blank"
+            ><img class="social" src="../assets/icon_tiktok.svg" />
+          </a>
+        </div>
+      </li>
+    </footer>
     <script src="../scripts/home_script.js"></script>
     <script src="../scripts/navbar_scripts.js"></script>
   </body>
