--- a/sito-web-laboratorio/html_pages/videogames.html
+++ b/sito-web-laboratorio/html_pages/videogames.html
@@ -8,7 +8,8 @@
     />
     <title>Videogames & Tabletop</title>
     <link rel="stylesheet" href="../styles/videogames_styles.css" />
-    <link rel="stylesheet" href="../styles/navbar_style.css"/>
+    <link rel="stylesheet" href="../styles/navbar_style.css" />
+    <link rel="stylesheet" href="../styles/bottombar_styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
       rel="stylesheet"
@@ -46,12 +47,6 @@
             <div class="dropdown-content">
               <a href="./formazione_dev.html">Formazione Developers</a>
               <a href="videogames.html">Videogames & Tabletop</a>
-            </div>
-          </li>
-          <li class="dropdown">
-            <div>
-              <a href="#facebook"><img class="social" src="../assets/icon_facebook.svg"></a>
-              <a href="#instagram"><img class="social" src="../assets/icon_instagram.svg"></a>
             </div>
           </li>
           <li class="dropdown">
@@ -119,6 +114,25 @@
       </div>
 </section>
 </main>
+<footer>
+  <li class="dropdown">
+    <div>
+      <a href="#facebook" target="_blank"
+        ><img class="social" src="../assets/icon_facebook.svg"
+      /></a>
+      <a
+        href="https://www.instagram.com/gamescontorino?igsh=dWdqOWtkMjJscTE5&utm_source=qr"
+        target="_blank"
+        ><img class="social" src="../assets/icon_instagram.svg"
+      /></a>
+      <a
+        href="https://www.tiktok.com/@gamescon.torino?_t=8rxtLYAN9Ms&_r=1"
+        target="_blank"
+        ><img class="social" src="../assets/icon_tiktok.svg" />
+      </a>
+    </div>
+  </li>
+</footer>
 <script src="../scripts/home_script.js"></script>
 <script src="../scripts/navbar_scripts.js"></script>
 </body>
