--- a/sito-web-laboratorio/html_pages/contatti.html
+++ b/sito-web-laboratorio/html_pages/contatti.html
@@ -59,6 +59,7 @@
     </header>
     <link rel="icon" href="../assets/icon_gamescon.png" />
      <main>
+      
         <section id="contatti">
             <h1>Vieni a trovarci alla splendida Palazzina di Caccia di Stupinigi per tre giorni di puro divertimento e innovazione.</h1>
 
@@ -69,10 +70,20 @@
                 Mail: gamescontorino@gmail.com
             </p>
  
+            <h1>DOVE SIAMO</h1>
+            <section id="mappa-evento">
+              <div class="image-container">
+                <img
+                  id="event_map"
+                  src="../assets/cartina_gamescon.png"
+                  alt="Mappa evento"
+                />
+              </div>
+            </section>
     </main>
 
+
  
-    </section>
     <section class="registration-container"></section>
         <div id="registration-form">
           <h2>Contattaci</h2>
@@ -99,4 +110,8 @@
                 required
               />
   </body>
+  <footer>
+    <p> Un evento unico, per la prima volta alla Palazzina Di Caccia Di Stupinigi la grande festa dedicata al mondo halloween ed  ai fumetti, al mondo cosplay,
+      ai videogames, ai giochi da tavolo.</p>
+  </footer>
 </html>
