--- a/sito-web-laboratorio/html_pages/home.html
+++ b/sito-web-laboratorio/html_pages/home.html
@@ -47,7 +47,7 @@
           <li class="dropdown">
             <a href="#social">Contatti</a>
             <div class="dropdown-content">
-              <a href="./contatti.html">Contatti</a>
+              <a href="#contatti">Contatti</a>
             </div>
           </li>
         </ul>
@@ -103,7 +103,8 @@
 
       <section class="registration-container">
         <div id="registration-form">
-          <h2>Prenota subito il tuo biglietto!</h2>
+          <h2>Prenota ora il biglietto... per il tuo fato!</h2>
+          <hr>
           <form>
             <div class="form-group">
               <input type="text" placeholder="Nome" name="nome" required />
